Contrast fix

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -261,7 +261,7 @@ aside h3 {
 }
 
 aside button {
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
     color: var(--accent-color-2);
     margin-bottom: 10px;
 }
